Tue Aug  8 20:32:08 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* update_utmp.c: flush preprocessor directive to left margin.

Tue Aug 8 17:24:27 EDT 1995	Paul Park	(pjpark@mit.edu)
	* update_utmp.c - getutmpx() requires address of utmpx structure.

Mon Aug  7 17:41:39 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* cleanup.c (pty_cleanup): Call pty_update_utmp using new interface.

	* update_utmp.c logwtmp.c : Call ptyint_update_wtmp not pty_update_wtmp.

	* cleanup.c (pty_cleanup): We can't use pid_t because we need to
        use something in libpty.h and we can't wait for pid_t to be
        defined there because we may not have configure.

	* update_wtmp.c (pty_update_wtmp): Rename to ptyint_update_wtmp.

	* update_utmp.c (pty_update_utmp): Change interface so it doesn't take a struct utmp.

	* libpty.h: Remove pty_update_wtmp as it's becoming  an internal interface.

Sat Aug  5 01:00:35 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* open_slave.c (pty_open_slave): pty_open_ctty returns != 0 on
		error, not less than.

Fri Aug  4 13:59:11 1995  Theodore Y. Ts'o  <tytso@dcl>

	* libpty.h (pty_cleanup): Fix argument type of pid to patch that
		used in the C file.  Include <utmpx.h> if present.  Only
		include <utmp.h> if it is present.
	
	* configure.in: Check for utmp.h and utmpx.h

Fri Aug  4 00:59:20 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in: use libupdate so to not get multiple copies of
		object files upon rebuild.

	* vhangup.c (ptyint_vhangup): Make sure preprocessor directives
		are at left margin.

	* open_slave.c (pty_open_slave): Make sure preprocessor directives
		are at left margin.

	* open_ctty.c (pty_open_ctty): Make sure preprocessor directives
		are at left margin.

	* cleanup.c (pty_cleanup): Add missing declarations for retval and
		fd.  Also, align preprocessor directives with left margin.

Thu Aug  3 15:04:34 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Check for vhangup and killpg.
